tests/snapshots/compile__wgsl_math_ceil_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_rgba4_a: f32,
    u_control_rgba4_b: f32,
    u_control_rgba4_g: f32,
    u_control_vignette3_radius: f32,
    u_control_vignette3_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn vignette3_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette3_radius;
    let softness = max(u.u_control_vignette3_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn ceil1_output(uv: vec2f) -> f32 {
    return ceil(vignette3_mask(uv));
}

fn rgba4_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(ceil1_output(uv), u.u_control_rgba4_g, u.u_control_rgba4_b, u.u_control_rgba4_a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return rgba4_output(uv);
}
